3822B1PE1/4_naive_gemm_cuda/vershinina_alexandra/log.txt
/home/crazyproger/sandbox/gpu-2025/3822B1PE1/4_naive_gemm_cuda/vershinina_alexandra/naive_gemm_cuda.cu(10): error: expected a declaration
     do {
     ^

/home/crazyproger/sandbox/gpu-2025/3822B1PE1/4_naive_gemm_cuda/vershinina_alexandra/naive_gemm_cuda.cu(44): warning #607-D: this pragma must immediately precede a statement
  #pragma unroll
          ^

Remark: The warnings can be suppressed with "-diag-suppress <warning-number>"

/home/crazyproger/sandbox/gpu-2025/3822B1PE1/4_naive_gemm_cuda/vershinina_alexandra/naive_gemm_cuda.cu(48): warning #607-D: this pragma must immediately precede a statement
  #pragma unroll
          ^

/home/crazyproger/sandbox/gpu-2025/3822B1PE1/4_naive_gemm_cuda/vershinina_alexandra/naive_gemm_cuda.cu(71): warning #12-D: parsing restarts here after previous syntax error
          __syncthreads();
                         ^

/home/crazyproger/sandbox/gpu-2025/3822B1PE1/4_naive_gemm_cuda/vershinina_alexandra/naive_gemm_cuda.cu(74): error: expected a declaration
          for (int k = 0; k < 16; ++k) {
          ^

/home/crazyproger/sandbox/gpu-2025/3822B1PE1/4_naive_gemm_cuda/vershinina_alexandra/naive_gemm_cuda.cu(76): warning #607-D: this pragma must immediately precede a statement
  #pragma unroll
          ^

/home/crazyproger/sandbox/gpu-2025/3822B1PE1/4_naive_gemm_cuda/vershinina_alexandra/naive_gemm_cuda.cu(83): warning #12-D: parsing restarts here after previous syntax error
          __syncthreads();
                         ^

/home/crazyproger/sandbox/gpu-2025/3822B1PE1/4_naive_gemm_cuda/vershinina_alexandra/naive_gemm_cuda.cu(84): error: expected a declaration
      }
      ^

/home/crazyproger/sandbox/gpu-2025/3822B1PE1/4_naive_gemm_cuda/vershinina_alexandra/naive_gemm_cuda.cu(131): warning #12-D: parsing restarts here after previous syntax error
          ;
          ^

/home/crazyproger/sandbox/gpu-2025/3822B1PE1/4_naive_gemm_cuda/vershinina_alexandra/naive_gemm_cuda.cu(134): error: this declaration has no storage class or type specifier
          std::memcpy(pinned_A, a.data(), bytes);
          ^

/home/crazyproger/sandbox/gpu-2025/3822B1PE1/4_naive_gemm_cuda/vershinina_alexandra/naive_gemm_cuda.cu(134): error: namespace "std" has no actual member "memcpy"
          std::memcpy(pinned_A, a.data(), bytes);
               ^

/home/crazyproger/sandbox/gpu-2025/3822B1PE1/4_naive_gemm_cuda/vershinina_alexandra/naive_gemm_cuda.cu(134): error: identifier "pinned_A" is undefined
          std::memcpy(pinned_A, a.data(), bytes);
                      ^

/home/crazyproger/sandbox/gpu-2025/3822B1PE1/4_naive_gemm_cuda/vershinina_alexandra/naive_gemm_cuda.cu(134): error: identifier "a" is undefined
          std::memcpy(pinned_A, a.data(), bytes);
                                ^

/home/crazyproger/sandbox/gpu-2025/3822B1PE1/4_naive_gemm_cuda/vershinina_alexandra/naive_gemm_cuda.cu(134): error: identifier "bytes" is undefined
          std::memcpy(pinned_A, a.data(), bytes);
                                          ^

/home/crazyproger/sandbox/gpu-2025/3822B1PE1/4_naive_gemm_cuda/vershinina_alexandra/naive_gemm_cuda.cu(134): error: too many initializer values
          std::memcpy(pinned_A, a.data(), bytes);
                                ^

/home/crazyproger/sandbox/gpu-2025/3822B1PE1/4_naive_gemm_cuda/vershinina_alexandra/naive_gemm_cuda.cu(135): error: this declaration has no storage class or type specifier
          std::memcpy(pinned_B, b.data(), bytes);
          ^

/home/crazyproger/sandbox/gpu-2025/3822B1PE1/4_naive_gemm_cuda/vershinina_alexandra/naive_gemm_cuda.cu(135): error: namespace "std" has no actual member "memcpy"
          std::memcpy(pinned_B, b.data(), bytes);
               ^

/home/crazyproger/sandbox/gpu-2025/3822B1PE1/4_naive_gemm_cuda/vershinina_alexandra/naive_gemm_cuda.cu(135): error: identifier "pinned_B" is undefined
          std::memcpy(pinned_B, b.data(), bytes);
                      ^

/home/crazyproger/sandbox/gpu-2025/3822B1PE1/4_naive_gemm_cuda/vershinina_alexandra/naive_gemm_cuda.cu(135): error: identifier "b" is undefined
          std::memcpy(pinned_B, b.data(), bytes);
                                ^

/home/crazyproger/sandbox/gpu-2025/3822B1PE1/4_naive_gemm_cuda/vershinina_alexandra/naive_gemm_cuda.cu(135): error: too many initializer values
          std::memcpy(pinned_B, b.data(), bytes);
                                ^

/home/crazyproger/sandbox/gpu-2025/3822B1PE1/4_naive_gemm_cuda/vershinina_alexandra/naive_gemm_cuda.cu(142): error: this declaration has no storage class or type specifier
          launch_matmul(d_A, d_B, d_C, N, stream);
          ^

/home/crazyproger/sandbox/gpu-2025/3822B1PE1/4_naive_gemm_cuda/vershinina_alexandra/naive_gemm_cuda.cu(142): error: identifier "d_A" is undefined
          launch_matmul(d_A, d_B, d_C, N, stream);
                        ^

/home/crazyproger/sandbox/gpu-2025/3822B1PE1/4_naive_gemm_cuda/vershinina_alexandra/naive_gemm_cuda.cu(142): error: identifier "d_B" is undefined
          launch_matmul(d_A, d_B, d_C, N, stream);
                             ^

/home/crazyproger/sandbox/gpu-2025/3822B1PE1/4_naive_gemm_cuda/vershinina_alexandra/naive_gemm_cuda.cu(142): error: identifier "d_C" is undefined
          launch_matmul(d_A, d_B, d_C, N, stream);
                                  ^

/home/crazyproger/sandbox/gpu-2025/3822B1PE1/4_naive_gemm_cuda/vershinina_alexandra/naive_gemm_cuda.cu(142): error: identifier "N" is undefined
          launch_matmul(d_A, d_B, d_C, N, stream);
                                       ^

/home/crazyproger/sandbox/gpu-2025/3822B1PE1/4_naive_gemm_cuda/vershinina_alexandra/naive_gemm_cuda.cu(142): error: identifier "stream" is undefined
          launch_matmul(d_A, d_B, d_C, N, stream);
                                          ^

/home/crazyproger/sandbox/gpu-2025/3822B1PE1/4_naive_gemm_cuda/vershinina_alexandra/naive_gemm_cuda.cu(142): error: too many initializer values
          launch_matmul(d_A, d_B, d_C, N, stream);
                             ^

/home/crazyproger/sandbox/gpu-2025/3822B1PE1/4_naive_gemm_cuda/vershinina_alexandra/naive_gemm_cuda.cu(148): error: identifier "elems" is undefined
          std::vector<float> C(elems);
                               ^

/home/crazyproger/sandbox/gpu-2025/3822B1PE1/4_naive_gemm_cuda/vershinina_alexandra/naive_gemm_cuda.cu(149): error: this declaration has no storage class or type specifier
          std::memcpy(C.data(), pinned_C, bytes);
          ^

/home/crazyproger/sandbox/gpu-2025/3822B1PE1/4_naive_gemm_cuda/vershinina_alexandra/naive_gemm_cuda.cu(149): error: namespace "std" has no actual member "memcpy"
          std::memcpy(C.data(), pinned_C, bytes);
               ^

/home/crazyproger/sandbox/gpu-2025/3822B1PE1/4_naive_gemm_cuda/vershinina_alexandra/naive_gemm_cuda.cu(149): error: identifier "pinned_C" is undefined
          std::memcpy(C.data(), pinned_C, bytes);
                                ^

/home/crazyproger/sandbox/gpu-2025/3822B1PE1/4_naive_gemm_cuda/vershinina_alexandra/naive_gemm_cuda.cu(149): error: too many initializer values
          std::memcpy(C.data(), pinned_C, bytes);
                                ^

/home/crazyproger/sandbox/gpu-2025/3822B1PE1/4_naive_gemm_cuda/vershinina_alexandra/naive_gemm_cuda.cu(149): error: a value of type "float *" cannot be used to initialize an entity of type "int"
          std::memcpy(C.data(), pinned_C, bytes);
                      ^

/home/crazyproger/sandbox/gpu-2025/3822B1PE1/4_naive_gemm_cuda/vershinina_alexandra/naive_gemm_cuda.cu(159): error: expected a declaration
          return C;
          ^

/home/crazyproger/sandbox/gpu-2025/3822B1PE1/4_naive_gemm_cuda/vershinina_alexandra/naive_gemm_cuda.cu(160): error: expected a declaration
      } catch (...) {
      ^

29 errors detected in the compilation of "/home/crazyproger/sandbox/gpu-2025/3822B1PE1/4_naive_gemm_cuda/vershinina_alexandra/naive_gemm_cuda.cu".
